# eastworld

./: .gitignore  .prettierignore  README.md  example_config.ini  pyproject.toml  pytest.ini
.github/workflows/: main.yml
app/: README.md  package-lock.json  package.json  tsconfig.json
app/public/: index.html
app/src/: App.scss  App.tsx  index.tsx  setupProxy.js  theme.tsx
app/src/client/: index.ts
app/src/client/core/: OpenAPI.ts
app/src/client/models/: Action.ts  ActionCompletion.ts  ActionCompletionWithDebug.ts  AgentDef.ts  Body_start_chat.ts  Conversation.ts  GameDef.ts  (+8 more)
app/src/components/: Agent.tsx  AgentActionEditor.tsx  AgentChat.tsx  AgentCoreBio.tsx  AgentEdit.tsx  AgentList.tsx  AgentLore.tsx  AgentQuery.tsx  Game.tsx  GameEdit.tsx  GameList.tsx  GameLore.tsx  Navbar.tsx
app/src/util/: ColoredPreview.tsx  DeleteModal.tsx
game/: agent.py  memory.py  prompt_helpers.py  session.py  ti_retriever.py
llm/: base.py  openai.py
schema/: __init__.py  agent.py  game.py  memory.py  token_response.py
server/: context.py  main.py  typecheck_fighter.py
server/examples/: example_game.json  latest_detective.json
server/router/: agent_def_handlers.py  authorization_handlers.py  game_def_handlers.py  llm_handlers.py  session_handlers.py  util_handlers.py
server/schema/: debug.py  summary.py
server/security/: auth.py
server/tests/: test_agent_handlers.py  test_game_handlers.py  test_util_json_loader.py
server/tests/example_data/: game.json  game_2.json
server/util/: json_loader.py  rate_limit.py  sso.py
tests/: helpers.py  test_agent.py  test_memory.py  test_ti_retriever.py
(+5 files in other folders)
